<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidWall</string>
    <string name="apply">Apply</string>
    <string name="applying_rules">Applying iptables rules.</string>
    <string name="applyrules">Apply rules</string>
    <string name="clear_log">Clear log</string>
    <string name="custom_script_defined">Custom script defined</string>
    <string name="custom_script_error">Error saving custom script</string>
    <string name="custom_script_title1">Enter your custom script bellow.(Leave it blank to remove)</string>
    <string name="custom_script_summary1">For information about custom scripts, click <a href="http://code.google.com/p/droidwall/wiki/CustomScripts">here</a>.</string>
    <string name="custom_script_removed">Custom script removed</string>
    <string name="custom_script_title2">Custom shutdown script</string>
    <string name="custom_script_summary2">You can also define a custom script to be executed when the firewall is <b>disabled</b>.</string>
    <string name="data">Data</string>
    <string name="deleting_rules">Deleting iptables rules.</string>
    <string name="discard">Discard</string>
    <string name="enternewpass">Enter the new password (leave blank to remove)</string>
    <string name="enterpass">Enter the password.</string>
    <string name="exit">Exit</string>
    <string name="fw_disabled">Firewall disabled</string>
    <string name="fw_enabled">Firewall enabled</string>
    <string name="help">Help</string>
    <string name="help_dialog_text"><i>Author: Rodrigo Zechin Rosauro</i>
        \n<i><a href="http://droidwall.googlecode.com">http://droidwall.googlecode.com</a></i>
        \n
		\n<i>Beautify by: wanglb</i>
		\n<i><a href="mailto:gswanglb@gmail.com">gswanglb@gmail.com</a></i>
		\n
        \n<i>DroidWall - Android Firewall</i> is a front-end application for the powerful <b>iptables</b> Linux firewall.It allows you to restrict which applications are permitted to access your data networks.
        \nThis is the perfect solution if you don\'t have an unlimited data plan, or just wants to see your battery lasting longer.
        \n
        \n<b>Using DroidWall:</b>
        \n<b>1.</b> Click on <b>first menu item</b> to switch between <i>White List</i> and <i>Black List</i> modes.
        \n<b>2.</b> Mark the applications that you want to block or allow (depending on the selected mode), for each interface.
        \n<b>3.</b> Click on the icon in the title bar to enable/disable the firewall. If the firewall is already enabled, just select <b>Apply rules</b>.
        \nThe rules will be saved and automatically restored when you restart your phone.
        \nIf you want to check all current iptables rules, select <b>Show rules</b> in the menu.
        \n
        \n<b>Firewall logs:</b>
        \nIf you want to see which applications have been blocked by DroidWall, open the menu and enable the Log.
        \nDroidWall will then log each application blocked. You can check the log by opening the menu and selecting <b>More -> Show log</b>.
        \n
        \n<b>Password lock:</b>
        \nYou can set a password lock for DroidWall by using the <b>Set password</b> menu option.
        \nTo remove the password protection, just reset it to blank.
    </string>
    <string name="log_cleared">Log cleared</string>
    <string name="log_disabled">Log disabled</string>
    <string name="log_enabled">Log enabled</string>
    <string name="log_was_disabled">Log has been disabled</string>
    <string name="log_was_enabled">Log has been enabled</string>
    <string name="mode_blacklist">Black list(block selected)</string>
    <string name="mode_whitelist">White list(allow selected)</string>
    <string name="package_name">Package name</string>
    <string name="pass_titleget">Password required</string>
    <string name="pass_titleset">Set password lock</string>
    <string name="passdefined">Password lock defined</string>
    <string name="passerror">Error changing password lock</string>
    <string name="passremoved">Password lock removed</string>
    <string name="please_wait">Please wait</string>
    <string name="purgerules">Purge rules</string>
    <string name="reading_apps">Reading installed applications</string>
    <string name="rules_applied">Rules applied with success</string>
    <string name="rules_deleted">Rules deleted with success</string>
    <string name="rules_saved">Rules saved with success</string>
    <string name="save">Save</string>
    <string name="saverules">Save rules</string>
    <string name="saving_rules">Saving iptables rules.</string>
    <string name="select_mode">Select mode</string>
    <string name="set_custom_script">Set custom script</string>
    <string name="setpwd">Set password</string>
    <string name="show_log">Show log</string>
    <string name="showrules">Show rules</string>
    <string name="title_help_activity">DroidWall v%s User Guide</string>
    <string name="title_main_activity">DroidWall v%s</string>
    <string name="toast_bin_installed">DroidWall: Binary files installed!</string>
    <string name="toast_disabled">DroidWall: Firewall disabled!</string>
    <string name="toast_enabled">DroidWall: Firewall enabled!</string>
    <string name="toast_error_disabling">DroidWall: Error disabling firewall!</string>
    <string name="toast_error_enabling">DroidWall: Error enabling firewall!</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_message">You have unsaved changes.\nDo you want to apply or discard them?</string>
    <string name="wifi">WiFi</string>
    <string name="working">Working...</string>

</resources>