<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/custom_script_title1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/custom_script_title1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/custom_script_summary1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/custom_script_summary1"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
        
        <EditText
            android:id="@+id/customscript"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_weight="0.4"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            android:scrollbars="horizontal|vertical"
            android:textSize="13sp" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <TextView
            android:id="@+id/custom_script_title2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/custom_script_title2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/custom_script_summary2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/custom_script_summary2"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/customscript2"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            android:scrollbars="horizontal|vertical"
            android:textSize="13sp" >

        </EditText>
    </LinearLayout>

</ScrollView>